Found a better way to change the tab colour at the bottom when selected

--- a/src/assets/scss/normalize.scss
+++ b/src/assets/scss/normalize.scss
@@ -518,20 +518,18 @@ template {
 
   /* Colour
      ========================================================================== */
-  ion-tab-button.table-list:focus {
-        color: var(--ion-color-secondary);
+
+  ion-tab-button.table-list {
+    --color-selected: var(--ion-color-secondary);
   }
-  ion-tab-button.uploader:focus {
-    color: var(--ion-color-warning);
+  
+  ion-tab-button.uploader {
+    --color-selected: var(--ion-color-warning);
   }
 
-  ion-tab-button.profile:focus {
-    color: var(--ion-color-success);
+  ion-tab-button.profile {
+    --color-selected: var(--ion-color-success);
   }
 
-icon-tab-button{
-  color: var(--ion-color-secondary);
-
-  }
 
 
