--- a/src/app/pages/table-detail/table-detail.page.html
+++ b/src/app/pages/table-detail/table-detail.page.html
@@ -3,7 +3,6 @@
     <ion-buttons slot="start">
       <ion-back-button text="" icon="arrow-round-back" defaultHref="/tabs"></ion-back-button>
     </ion-buttons>
-
   </ion-toolbar>
 </ion-header>
 
@@ -24,48 +23,21 @@
   </div>
 
 
-      <ion-card class="pictureCard" tappable *ngFor="let p of tablePhotos">
-        <div class="soloImage">
-          <img class="soloImage" src='{{p?.picture}}'/>
-        </div>
-        <div class="soloImageText">
-          <ion-label class="photoTitle">{{p?.photoTitle}}</ion-label><br>
-          <ion-label>Description: <strong>{{p?.photoDescription}}</strong></ion-label>
-        </div>
-      </ion-card>
-
-
-
-
-  <!--<ion-card class="add-guest-form">-->
-    <!--<ion-card-header> Add Guests </ion-card-header>-->
-    <!--<ion-card-content>-->
-      <!--<ion-row>-->
-        <!--<ion-col size="8">-->
-          <!--<ion-item>-->
-            <!--<ion-label position="stacked">Name</ion-label>-->
-            <!--<ion-input-->
-                    <!--[(ngModel)]="guestName"-->
-                    <!--type="text"-->
-                    <!--placeholder=""-->
-            <!--&gt;</ion-input>-->
-          <!--</ion-item>-->
-        <!--</ion-col>-->
-
-
-      <!--</ion-row>-->
-      <!--<span *ngIf="guestPicture">Picture taken!</span>-->
-
-      <!--<ion-button-->
-              <!--color="primary"-->
-              <!--expand="block"-->
-              <!--(click)="addGuest(guestName)"-->
-              <!--[disabled]="!guestName"-->
-      <!--&gt;-->
-        <!--Add Guest-->
-      <!--</ion-button>-->
-    <!--</ion-card-content>-->
-  <!--</ion-card>-->
+  <ion-card class="pictureCard" tappable *ngFor="let p of tablePhotos">
+    <div class="d0">
+    <div class="outer-div">
+    <div class="fixedHeight">
+    <div class="soloImage">
+      <img class="soloImage" src='{{p?.picture}}'/>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="soloImageText">
+      <ion-label class="photoTitle">{{p?.photoTitle}}</ion-label><br>
+      <ion-label>Description: <strong>{{p?.photoDescription}}</strong></ion-label>
+    </div>
+  </ion-card>
 
 </ion-content>
 
