--- a/src/assets/scss/normalize.scss
+++ b/src/assets/scss/normalize.scss
@@ -236,7 +236,6 @@ ion-card.tableList {
   }
 
   div.d0 {
-    background: grey;
     width:100%;
     height: 300px;
   }
@@ -249,8 +248,6 @@ ion-card.tableList {
   div.fixedHeight {
     height: 300px;
     width: 100%;
-    //overflow-y: hidden;
-    background-color: var(--ion-color-primary);
     display: table;
   }
 
@@ -274,20 +271,21 @@ ion-card.tableList {
   }
 
   div.pictureGrid {
-    object-fit: contain;
+    height: 80px;
     width: 100%;
   }
 
   div.gridImage {
-    width: 100%;
     height: 80px;
-    overflow-y: hidden;
-    align-items: center;
-    background-color: var(--ion-color-success);
+    overflow: hidden;
   }
 
-  img.soloImage {
+  div.fixedHeightSmall {
+    height: 80px;
+    width: 100%;
+    display: table;
   }
+
 
   ion-button.registerPages {
     margin-top: 15%;
