--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -14,7 +14,7 @@
     <div class="form">
 
         <form [formGroup]="loginForm">
-            <ion-item>
+            <ion-item class="blue">
                 <ion-label position="stacked">Email</ion-label>
                 <ion-input
                         formControlName="email"
@@ -33,7 +33,7 @@
                 <ion-label>Please enter a valid email address.</ion-label>
             </ion-item>
 
-            <ion-item>
+            <ion-item class="blue">
                 <ion-label position="stacked">Password</ion-label>
                 <ion-input
                         formControlName="password"
