--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -11,7 +11,7 @@
 
   <div class="form">
   <form [formGroup]="signupForm">
-    <ion-item>
+    <ion-item class="blue">
       <ion-label position="stacked">Email</ion-label>
       <ion-input
               formControlName="email"
@@ -29,7 +29,7 @@
       <ion-label>Please enter a valid email.</ion-label>
     </ion-item>
 
-    <ion-item>
+    <ion-item class="blue">
       <ion-label position="stacked">Password</ion-label>
       <ion-input
               formControlName="password"
