--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -17,7 +17,7 @@
 
 
     <form [formGroup]="resetPasswordForm">
-    <ion-item>
+    <ion-item class="blue">
       <ion-label position="stacked">Email</ion-label>
       <ion-input
               formControlName="email"
