Added pull to refresh feature which randomly selects from a list of puns

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -14,6 +14,13 @@
 
 <ion-content padding>
 
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5">
+    <ion-refresher-content class="pink"
+                           refreshingSpinner="bubbles"
+                           refreshingText="{{this.pun}}">
+    </ion-refresher-content>
+  </ion-refresher>
+
   <div class="tableDetailHeader">
     <h1 class="tableTitle"*ngIf="userProfile?.firstName || userProfile?.lastName">
       {{userProfile?.firstName}} {{userProfile?.lastName}}</h1>
