Tidied up Module page with comments and code

--- a/src/app/pages/table-detail/table-detail.page.html
+++ b/src/app/pages/table-detail/table-detail.page.html
@@ -9,10 +9,7 @@
 <ion-content padding>
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5">
-    <ion-refresher-content class="blue"
-                           refreshingSpinner="bubbles"
-                           refreshingText="{{pun}}">
-    </ion-refresher-content>
+    <ion-refresher-content class="blue" refreshingSpinner="bubbles" refreshingText="{{pun}}"></ion-refresher-content>
   </ion-refresher>
 
   <div class="tableDetailHeader">
