Tidied up profile page code

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -15,10 +15,7 @@
 <ion-content padding>
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5">
-    <ion-refresher-content class="pink"
-                           refreshingSpinner="bubbles"
-                           refreshingText="{{this.pun}}">
-    </ion-refresher-content>
+    <ion-refresher-content class="pink" refreshingSpinner="bubbles" refreshingText="{{this.pun}}"></ion-refresher-content>
   </ion-refresher>
 
   <div class="tableDetailHeader">
