--- a/src/app/pages/edit-image/edit-image.page.html
+++ b/src/app/pages/edit-image/edit-image.page.html
@@ -7,28 +7,17 @@
 </ion-header>
 
 <ion-content padding>
+
   <img [src]="photo" >
 
   <ion-item class="yellow">
     <ion-label position="stacked">Title</ion-label>
-    <ion-input
-            class="blue"
-            [(ngModel)]="photoTitle"
-            type="text"
-            placeholder="Name your creation!"
-    >
-    </ion-input>
+    <ion-input class="blue" [(ngModel)]="photoTitle" type="text" placeholder="Name your creation!"></ion-input>
   </ion-item>
 
   <ion-item class="yellow">
     <ion-label position="stacked">Description</ion-label>
-    <ion-input
-            class="blue"
-            [(ngModel)]="photoDescription"
-            type="text"
-            placeholder="Give us a taster"
-    >
-    </ion-input>
+    <ion-input class="blue" [(ngModel)]="photoDescription" type="text" placeholder="Give us a taster"></ion-input>
   </ion-item>
 
   <ion-item class="yellow">
@@ -37,7 +26,6 @@
       <ion-item tappable *ngFor="let table of tableList; let i = index">
         <ion-label color="primary">{{table.name}}</ion-label>
         <ion-checkbox slot="start" [disabled]="tableList[i].value" [(ngModel)]="photoTable" (click)="Selection(table.name, table);"></ion-checkbox>
-
       </ion-item>
     </ion-list>
   </ion-item>
