finalised code touch-ups

--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -1,50 +1,47 @@
 <ion-header no-border>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button text="" icon="arrow-round-back" defaultHref="/login"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button text="" icon="arrow-round-back" defaultHref="/login"></ion-back-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 
 <ion-content fullscreen>
-  <h1 class="setupTitle">Forgot Password</h1>
-  <h1 class="subHeading">No worries!</h1>
+    <h1 class="setupTitle">Forgot Password</h1>
+    <h1 class="subHeading">No worries!</h1>
 
 
+    <div class="form">
 
-  <div class="form">
 
+        <form [formGroup]="resetPasswordForm">
+            <ion-item class="blue">
+                <ion-label position="stacked">Email</ion-label>
+                <ion-input
+                        formControlName="email"
+                        type="email"
+                        placeholder="Your email address"
+                        [class.invalid]="!resetPasswordForm.controls['email'].valid && resetPasswordForm.controls['email'].touched"
+                >
+                </ion-input>
+            </ion-item>
+            <ion-item
+                    class="error-message"
+                    *ngIf="!resetPasswordForm.controls['email'].valid && resetPasswordForm.controls['email'].touched"
+            >
+                <ion-label>Please enter a valid email.</ion-label>
+            </ion-item>
 
-    <form [formGroup]="resetPasswordForm">
-    <ion-item class="blue">
-      <ion-label position="stacked">Email</ion-label>
-      <ion-input
-              formControlName="email"
-              type="email"
-              placeholder="Your email address"
-              [class.invalid]="!resetPasswordForm.controls['email'].valid &&
-          resetPasswordForm.controls['email'].touched"
-      >
-      </ion-input>
-      </ion-item>
-      <ion-item
-              class="error-message"
-              *ngIf="!resetPasswordForm.controls['email'].valid &&
-          resetPasswordForm.controls['email'].touched"
-      >
-        <ion-label>Please enter a valid email.</ion-label>
-      </ion-item>
+            <ion-button
+                    class="registerPages"
+                    expand="block"
+                    (click)="resetPassword(resetPasswordForm)"
+                    [disabled]="!resetPasswordForm.valid"
+            >
+                Reset your Password
+            </ion-button>
+        </form>
 
-      <ion-button
-              class="registerPages"
-              expand="block"
-              (click)="resetPassword(resetPasswordForm)"
-              [disabled]="!resetPasswordForm.valid"
-      >
-        Reset your Password
-      </ion-button>
-    </form>
-
-  </div>
+    </div>
 </ion-content>
